# content-hub

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/content-hub/: fake_data.py  main.py
backend/content-hub/alembic/versions/: 2025_03_08_1929-a8f831ed5b9f_add_users_table.py  2025_03_16_1914-1f6753ff0212_add_articles_table.py  2025_04_02_2019-ce747ea56f5a_add_user_table.py  2025_04_02_2104-2cea66e32356_add_article_table.py  2025_04_09_1924-4e1b383909f7_create_like_table.py  2025_04_13_1541-2286c1510e2a_add_user_status_enum.py  2025_04_22_1037-070ce4d0d6c3_add_like_table.py  2025_04_29_1418-93e3301caf2a_add_tag_tables.py  2025_04_29_1418-93e3301caf2a_add_tags_tables.py  2025_05_02_1312-902ffdf2b5da_add_comment_table.py  2025_05_02_1312-902ffdf2b5da_comment.py  2025_05_09_2223-d692800f8637_add_like_article_and_like_comment_tables.py
backend/content-hub/api/: __init__.py
backend/content-hub/api/auth/: __init__.py  crud.py  (+4 more)
backend/content-hub/core/: config.py
backend/content-hub/crud/: articles.py  comment.py  like.py  like_article.py  like_comment.py  likearticle.py  users.py
backend/content-hub/tests/: conftest.py  test_articles.py  test_auth.py  test_comment.py  test_like.py  test_like_article.py  test_like_comment.py  test_likearticle.py  test_test.py  test_users.py
backend/content-hub/utils/: __init__.py  article_utils.py  case_converter.py  db_url.py  decorators.py  user_utils.py
backend/docs/: api-endpoints.md  db-diagrams.uml
(+72 files in other folders)
